fix header appearance jump of the screen

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -13,6 +13,9 @@
   align-items: center;
   background-color: #fdf2e9;
 
+  position: absolute;
+  top: 0;
+  width: 100%;
   padding: 3.2rem;
 }
 
